# CodeWhale

./: CHANGELOG.md  Cargo.toml  README.ja-JP.md  README.md  README.vi.md  README.zh-CN.md  TRAIN_1_RESULT.md  config.example.toml
.github/: APPROVED_CONTRIBUTORS
.github/workflows/: stale.yml  v0868-milestone-sync.yml
crates/agent/: Cargo.toml
crates/cli/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  setup_state.rs  user_constitution.rs
crates/core/: Cargo.toml
crates/execpolicy/: Cargo.toml
crates/hooks/: Cargo.toml
crates/mcp/: Cargo.toml
crates/protocol/: Cargo.toml
crates/protocol/src/: fleet.rs
crates/secrets/: Cargo.toml
crates/state/: Cargo.toml
crates/tools/: Cargo.toml
crates/tui/: CHANGELOG.md  Cargo.toml
crates/tui/locales/: en.json  es-419.json  ja.json  pt-BR.json  vi.json  zh-Hans.json  zh-Hant.json
crates/tui/src/: client.rs  config.rs  config_persistence.rs  hooks.rs  localization.rs  main.rs  model_inventory.rs  palette.rs  prompts.rs  runtime_threads.rs  working_set.rs
crates/tui/src/commands/: session.rs
crates/tui/src/commands/groups/config/: config.rs  mod.rs
crates/tui/src/commands/groups/core/: core.rs
crates/tui/src/config/: models.rs  subagent_limits.rs
crates/tui/src/core/: engine.rs
crates/tui/src/core/engine/: tests.rs  tool_catalog.rs  turn_loop.rs
crates/tui/src/fleet/: manager.rs  worker_runtime.rs
crates/tui/src/runtime_api/: tests.rs
crates/tui/src/skills/: mod.rs
crates/tui/src/tools/: mod.rs  registry.rs  shell.rs  workflow.rs
crates/tui/src/tools/subagent/: mod.rs
crates/tui/src/tui/: app.rs  command_palette.rs  composer_ui.rs  file_tree.rs  history.rs  mouse_ui.rs  plan_prompt.rs  provider_picker.rs  sidebar.rs  ui.rs
crates/tui/src/tui/app/: tests.rs
crates/tui/src/tui/history/: archived_context.rs
crates/tui/src/tui/hotbar/: actions.rs
crates/tui/src/tui/setup/: mod.rs
crates/tui/src/tui/ui/: tests.rs
crates/tui/src/tui/views/: help.rs  mod.rs
crates/tui/src/tui/widgets/: footer.rs
docs/: AGENT_WORKFLOWS_0868.md  CONFIGURATION.md  PROVIDERS.md  V0_9_0_EXECUTION_MAP.md  V0_9_0_RELEASE_ACCEPTANCE.md
npm/codewhale/: package.json
scripts/: check-provider-registry.py
scripts/release/: app-server-smoke.sh
web/: package-lock.json  package.json
web/app/[locale]/docs/: page.tsx
workflows/: v0868_catalog_lane.workflow.js  v0868_issue_implement.workflow.js  v0868_issue_sweep.workflow.js  v0868_release_gate.workflow.js  v0868_stopship_lane.workflow.js  v0868_tui_copy_lane.workflow.js  v0868_workflow_ui_lane.workflow.js
