[package]
name = "codewhale-config"
version = "0.8.66"
edition.workspace = true
license = "MIT"
repository = "https://github.com/Hmbown/CodeWhale"
description = "Config schema and precedence model for CodeWhale"

[dependencies]
anyhow.workspace = true
codewhale-execpolicy.workspace = true
codewhale-secrets.workspace = true
dirs.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
