[package]
name = "codewhale-core"
version = "0.8.66"
edition.workspace = true
license = "MIT"
repository = "https://github.com/Hmbown/CodeWhale"
description = "Core runtime boundaries for CodeWhale"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
codewhale-agent.workspace = true
codewhale-config.workspace = true
codewhale-execpolicy.workspace = true
codewhale-hooks.workspace = true
codewhale-mcp.workspace = true
codewhale-protocol.workspace = true
codewhale-state.workspace = true
codewhale-tools.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
