[package]
name = "codewhale-execpolicy"
version = "0.8.67"
edition.workspace = true
license = "MIT"
repository = "https://github.com/Hmbown/CodeWhale"
description = "Execution policy and approval model for CodeWhale"

[dependencies]
anyhow.workspace = true
codewhale-protocol.workspace = true
serde.workspace = true
