[package]
name = "codewhale-hooks"
version = "0.8.66"
edition.workspace = true
license = "MIT"
repository = "https://github.com/Hmbown/CodeWhale"
description = "Hook dispatch and notifications support for CodeWhale"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
codewhale-protocol.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
