[package]
name = "codewhale-mcp"
version = "0.8.67"
edition.workspace = true
license = "MIT"
repository = "https://github.com/Hmbown/CodeWhale"
description = "MCP server lifecycle and tool proxy compatibility for CodeWhale"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
