[package]
name = "codewhale-protocol"
version = "0.8.67"
edition.workspace = true
license = "MIT"
repository = "https://github.com/Hmbown/CodeWhale"
description = "App-server protocol frames for CodeWhale runtime integrations"

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
