[package]
name = "codewhale-secrets"
version = "0.8.66"
edition.workspace = true
license = "MIT"
repository = "https://github.com/Hmbown/CodeWhale"
description = "Secret storage backends (OS keyring with file fallback) for DeepSeek workspace"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[target.'cfg(all(target_os = "linux", not(target_env = "ohos"), not(target_env = "musl")))'.dependencies]
keyring = { workspace = true, features = ["linux-native-sync-persistent", "crypto-rust"] }

[dev-dependencies]
tempfile.workspace = true
