[package]
name = "codewhale-tools"
version = "0.8.66"
edition.workspace = true
license = "MIT"
repository = "https://github.com/Hmbown/CodeWhale"
description = "Tool invocation lifecycle, schema validation, and scheduler parallelism for CodeWhale"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
codewhale-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
